fixed header, hero and info align error

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -21,33 +21,35 @@
    }
 
     .logo {
-     height: 40px;
-     width: 70px;
-     margin: 3px;
+     height: 30px;
+     width: 60px;
+     margin-top: 5px;
+
+     @media all and (min-width:768px){
+      margin-top: 10px;
+     }
+     @media all and (min-width:1200px){
+      height: 40px;
+      width: 70px;
+      margin-top: 15px;
+     }
     }
     .menu {
-     margin-right: 50px;
-
-     @media all and (min-width:1200px){
-      margin-right: 0px;
-     }
-  
       .header-menu {
        display: flex;
        flex-direction: row;
-       justify-content: space-around;
-       width: 200px;
-       height: 100%;
+       justify-content: space-between;
+       margin: 5px;
      
         li {
          font-family: $font-primary;
-         font-size: 18px;
+         font-size: 14px;
          display: flex;
          justify-content: center;
-         margin: 0px;
-         padding: 10px; 
-         line-height: 10px;   
          
+         @media all and (min-width:768px){
+          font-size: 16px;
+         }
          @media all and (min-width:1200px){
           margin-top: 10px;
           font-size: 20px;
@@ -55,7 +57,7 @@
         }
       
         a{  
-         padding: 10px; 
+          margin: 15px; 
         } 
 
       }
