--- a/src/scss/layout/_hero.scss
+++ b/src/scss/layout/_hero.scss
@@ -21,11 +21,12 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
-    padding-top:70px;
+    padding-top:85px;
     font-size: 12px;
     color: $color-primary;
+
     @media all and (min-width:760px){
-      padding-top:50px;
+      padding-top:100px;
       font-size: 16px;
     }
     @media all and (min-width:1200px){
