--- a/src/scss/layout/_info.scss
+++ b/src/scss/layout/_info.scss
@@ -2,25 +2,23 @@
   width: 100%;
   display:flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-evenly;
   position: relative;
-  padding: 15px;
   background-color: #DFF7D3;
 
   @media all and (min-width:760px){
-    justify-content: space-around;
-    padding-bottom: 25px;
+   padding-bottom: 25px;
   }
   
   .portrait{
-    height: 180px;
-    margin-top: 6vh;
+    height: 170px;
     border-radius: 15px;
+    margin-top: 6vh;
 
     @media all and (min-width:768px){
       margin-top: 40vh;
-      height: 450px;
-      margin-top: 20%;
+      height: 400px;
+      margin-top: 20vh;
     }
 
     @media all and (min-width:1200px){
@@ -35,14 +33,18 @@
     justify-content: center;
     align-items: center;
     margin: 5px; 
-    padding: 10px;
+    
     font-family: $font-primary;
     
 
     @media all and (min-width:760px){
-      width: 570px;
+      width: 450px;
       padding: 5px;
       font-size: 25px;
+    }
+
+    @media all and (min-width:1200px){
+      width: 550px;
     }
  
      h2{
